Compose UI Implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NewsApplication</string>
 
     <string name="network_error">Please check your network connection and try again later</string>
+    <string name="coming_soon">Tap functionality is coming soon</string>
 </resources>
